--- a/15-puzzle/package.json
+++ b/15-puzzle/package.json
@@ -44,5 +44,8 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
     "webpack-visualizer-plugin": "^0.1.10"
+  },
+  "dependencies": {
+    "eventemitter3": "^3.0.0"
   }
 }
