feat(15-puzzle): :sparkles:新增 15 puzzle 分数记录

--- a/15-puzzle/package.json
+++ b/15-puzzle/package.json
@@ -47,6 +47,8 @@
   },
   "dependencies": {
     "bezier-easing": "^2.0.3",
-    "eventemitter3": "^3.0.0"
+    "eventemitter3": "^3.0.0",
+    "fingerprintjs2": "^1.5.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
