--- a/15-puzzle/package.json
+++ b/15-puzzle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "15-puzzle",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "reactScaffoldVersion": "0.1.1",
   "description": "gt front end project scaffold",
   "main": "none",
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "bezier-easing": "^2.0.3",
+    "date-fns": "^1.29.0",
     "eventemitter3": "^3.0.0",
     "fingerprintjs2": "^1.5.1",
     "whatwg-fetch": "^2.0.3"
