--- a/renju/package.json
+++ b/renju/package.json
@@ -9,14 +9,12 @@
   "author": "vivaxy",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
-    "@babel/register": "^7.0.0-beta.40",
-    "ava": "^0.25.0"
+    "ava": "^0.25.0",
+    "esm": "^3.0.1"
   },
   "ava": {
     "require": [
-      "@babel/register"
+      "esm"
     ]
   }
 }
