chore(html): :memo:

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "gds && git add README.md"
+      "pre-commit": "gds && git add ."
     }
   },
   "gds": {
