--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "game",
   "version": "0.0.0",
-  "description": "[Game](http://vivaxy.github.io/game/)",
+  "description": "[Game](https://vivaxy.github.io/game/)",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vivaxy/game.git"
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/vivaxy/game#readme",
   "devDependencies": {
-    "@vivaxy/github-demo-scripts": "^0.3.1",
+    "@vivaxy/github-demo-scripts": "^0.5.0",
     "husky": "^3.0.0"
   },
   "husky": {
@@ -26,7 +26,7 @@
     }
   },
   "gds": {
-    "readme": "[Game](http://vivaxy.github.io/game/)",
-    "link-prefix": "http://vivaxy.github.io/game/"
+    "readme-prefix": "[Game](https://vivaxy.github.io/game/)",
+    "link-prefix": "https://vivaxy.github.io/game/"
   }
 }
