--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     }
   },
   "gds": {
-    "readme-prefix": "[Game](https://vivaxy.github.io/game/)",
+    "readme-prefix": "# [Game](https://vivaxy.github.io/game/)",
     "link-prefix": "https://vivaxy.github.io/game/"
   }
 }
