chore: :arrow_up: upgrade husky to 5

--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
   "homepage": "https://github.com/vivaxy/game#readme",
   "devDependencies": {
     "@vivaxy/github-demo-scripts": "^0.5.0",
-    "husky": "^5.0.0",
+    "husky": "5",
     "lint-staged": "^10.0.0",
+    "pinst": "^2.1.4",
     "prettier": "^2.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && gds && git add ."
-    }
   },
   "lint-staged": {
     "*.{js,ts,css,less,json,md,html,yml,yaml,pcss,jsx,tsx}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "gds": {
     "readme-prefix": "# [Game](https://vivaxy.github.io/game/)",
     "link-prefix": "https://vivaxy.github.io/game/"
+  },
+  "scripts": {
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   }
 }
