--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/vivaxy/games#readme",
   "devDependencies": {
-    "@vivaxy/github-demo-scripts": "^0.5.0",
+    "@vivaxy/github-pages-scripts": "^0.5.1",
     "husky": "7",
     "lint-staged": "^11.0.0",
     "pinst": "^2.1.4",
@@ -29,7 +29,7 @@
       "prettier --write"
     ]
   },
-  "gds": {
+  "gps": {
     "readme-prefix": "# [Games](https://vivaxy.github.io/games/)",
     "link-prefix": "https://vivaxy.github.io/games/"
   },
